receiving data from server

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -8,4 +8,5 @@
   <button type="button" (click)="goBack()">
     go back
   </button>
+  <button type="button" (click)="save()">save</button>
 </div>
