--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,8 +1,10 @@
 <div id="search-component">
   <label for="search-box">Hero Search</label>
+  <!-- TODO: 08:45 Переделать на реактивную форму -->
   <input #searchBox id="search-box" (input)="search(searchBox.value)" />
 
   <ul class="search-result">
+    <!-- TODO: правильный подход (неявная подписка вне компонента) -->
     <li *ngFor="let hero of heroes$ | async">
       <a routerLink="/detail/{{hero.id}}">
         {{hero.name}}
