--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 <nav>
-    <!-- TODO: 13:05 Заменить a:active на routerLinkActive (даёт возможность присваивать стили когда ссылка активна) -->
+    <!-- [ ] 13:05 Заменить a:active на routerLinkActive (даёт возможность присваивать стили когда ссылка активна) -->
     <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/heroes">Heroes</a>
 </nav>
