--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,7 +16,7 @@ nav a:hover {
   color: white;
   background-color: #42545c;
 }
-/* TODO: 12:50 */
+/* [ ] 12:50 */
 nav a:active {
   background-color: black;
 }
