--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,7 +2,7 @@
 
 <div>
   <label for="new-hero">Hero name: </label>
-  <!-- TODO: ??? -->
+  <!-- [ ] ??? -->
   <input id="new-hero" #heroName />
 
   <!-- (click) passes input value to add() and then clears the input -->
@@ -12,8 +12,8 @@
 </div>
 
 <ul class="heroes">
-  <li *ngFor="let hero of heroes">
-    <!-- TODO: event binding -->
+  <li *ngFor="let hero of heroes$ | async">
+    <!-- [ ] event binding -->
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span>
       {{hero.name}}
