--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,7 +2,7 @@
 
 <div>
   <label for="new-hero">Hero name: </label>
-  <!-- [ ] ??? -->
+  <!-- [ ] Добавить реактивную форму??? -->
   <input id="new-hero" #heroName />
 
   <!-- (click) passes input value to add() and then clears the input -->
