--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -3,16 +3,13 @@
 <div>
   <label for="new-hero">Hero name: </label>
   <input id="new-hero" #heroName />
-
-  <!-- (click) passes input value to add() and then clears the input -->
   <button type="button" class="add-button" (click)="add(heroName.value); heroName.value=''">
     Add hero
   </button>
 </div>
 
 <ul class="heroes">
-  <li *ngFor="let hero of heroes">
-    <!-- event binding -->
+  <li *ngFor="let hero of heroes$ | async">
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span>
       {{hero.name}}
