--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="messageService.messages.length">
+<div *ngIf="(messageService.messages | async)?.length">
   <h2>Messages</h2>
   <button
       type="button"
@@ -7,7 +7,7 @@
   >
       Clear messages
   </button>
-  <div *ngFor="let message of messageService.messages">
+  <div *ngFor="let message of messageService.messages | async">
       {{message}}
   </div>
 </div>
